# Sulong-Cobol

./: KECCAK.cob  Makefile  Makefile.in  README.md  SHA3-256.js  SHA3-Wrapper.cob  TESTSHA3-256.cob  aminclude_static.am  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  defaults.h  libtool  makefile  pre-inst-env  setup.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
cobc/: Makefile  Makefile.in  cobc.1  cobc.c  cobc.h  codegen.c
cobc/.deps/: cobc.Po  codegen.Po  codeoptim.Po  config.Po  error.Po  field.Po  help.Po  parser.Po  pplex.Po  ppparse.Po  reserved.Po  scanner.Po  tree.Po  typeck.Po
cobsha3/: KECCAK.cob  SHA3-256.js  SHA3-Wrapper.cob  TESTSHA3-256.cob  TESTSHA3.js  init.c  interface.c  makefile
config/: Makefile
copy/: Makefile
doc/: Makefile  cbhelp.tex
extras/: Makefile
gmp/: cnfm4p.tmp
gnucobol/: aminclude_static.am  config.h.in  configure  configure.ac  tarstamp.h
gnucobol/autom4te.cache/: output.2  requests  traces.2
gnucobol/cobc/: cobc.1  cobc.h  codegen.c  flag.def  help.c
gnucobol/doc/: gnucobol.info
gnucobol/libcob/: Makefile.in  common.c
lib/: Makefile
libcob/: Makefile  Makefile.in  common.c  common.h  numeric.c
libcob/.deps/: call.Plo  cobgetopt.Plo  common.Plo  fileio.Plo  intrinsic.Plo  mlio.Plo  move.Plo  numeric.Plo  reportio.Plo  screenio.Plo  strings.Plo  termio.Plo
po/: Makefile  Makefile.in  POTFILES
tests/: Makefile  atconfig  atlocal  run_prog_manual.sh
tests/cobol85/: Makefile
vbisam/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configcit.sh  configure  configure.ac  vbdecimal.h  vbisam.h
vbisam/libvbisam/: Makefile.am  Makefile.in  isbuild.c  ischeck.c  isdelete.c  ishelper.c  isinternal.h  isopen.c  isread.c  isrecover.c  isrewrite.c  istrans.c  vbdataio.c  vbindexio.c  vbkeysio.c  vblocking.c  vblowlevel.c  vbnodememio.c
vbisam/tests/: Makefile.am  Makefile.in  detest00.c  detest01.c  jvntest.c  mvtest.c  mvtest2.c
